--- a/index.html
+++ b/index.html
@@ -17,19 +17,7 @@
                     <i class="ion-ios-plus-outline"></i>
                 </button>
             </div>
-            <div class="edit" id="edit-list">
-                <!-- <div class="item clearfix">
-                    <div class="list-name">PlaceHolder</div>
-                    <div class="right edit-item">
-                        <button class="edit-btn">
-                            <i class="ion-ios-gear-outline"></i>
-                        </button>
-                        <button class="remove-btn">
-                            <i class="ion-ios-close-outline"></i>
-                        </button>
-                    </div>
-                </div> -->
-            </div>
+            <div class="edit" id="edit-list"></div>
         </div>
         <div id="activities">
             <div id="get-title">
@@ -43,19 +31,10 @@
                     </button>
                 </div>
             </div>
-            <div class="edit" id="set-activity">
-                <!-- <div class="item clearfix">
-                    <div class="description">description</div>
-                    <div class="right edit-item">
-                        <button class="remove-btn">
-                            <i class="ion-ios-close-outline"></i>
-                        </button>
-                    </div>
-                </div> -->
-            </div>
+            <div class="edit" id="set-activity"></div>
             <div id="add">
                 <input type="text" class="add-item" placeholder="Add Activity">
-                    <button class="add-btn"><i class="ion-ios-checkmark-outline"></i></button>
+                <button class="add-btn"><i class="ion-ios-checkmark-outline"></i></button>
             </div>
         </div>
     </div>
